testdata/vaults/invalid/note/missing-frontmatter.Rmd
This note has no frontmatter at all.

It should produce diagnostics when parsed.
